--- a/app/index/index.html
+++ b/app/index/index.html
@@ -44,6 +44,10 @@
                 center: Station_cathy //初始化的地圖中心位置
             });
 
+            //TODO: 改成 load db or csv or api (政府開放平台)
+            // data processing
+            //怎麼取得座標? ->> https://developers.google.com/maps/documentation/geocoding/overview
+            //優化前端框架與載入
             const companys = [
                 {lat: 25.0416463, lng: 121.5527911 , name: "國泰世華忠孝分行"},
                 {lat: 25.0652883, lng: 121.5772416 , name: "國泰世華南內湖分行"},
