fix capital field

--- a/app/index/index.html
+++ b/app/index/index.html
@@ -63,7 +63,7 @@
                     `<div id="infowindow"><h2>${map.name}</h2>
                         <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">統編:${map.tw_business_accounting_no}</div>
                         <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">行業別:${map.category}</div>
-                        <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">資本額(實收):${map.tw_business_accounting_no}</div>
+                        <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">資本額(實收):${map.paid_in_capital_amount}</div>
                         <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">代表人:${map.responsible_name}</div>
                         <div jstcache="4" jsinstance="*0" class="address-line full-width" jsan="7.address-line,7.full-width">地址:${map.address}</div>
                         </div>`
